--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
             var container = document.getElementById('ready');
             container.innerHTML = "new version ready!";
         })
+        ipcRenderer.on('updateReadyStatus', function(event, text) {
+            // changes the text of the button
+            var container = document.getElementById('ready');
+            container.innerHTML = "new version ready but not downloaded yet!";
+        })
+        ipcRenderer.on('updateProgress', function(event, progress) {
+            // changes the text of the button
+            var container = document.getElementById('ready');
+            container.innerHTML = progress;
+        })
     </script>
     Version(s): <span id="version">v0.1.15</span>
     <!-- the button onClick sends a quitAndInstall message to the electron main process -->
